# bram

./: .gitignore  BOM.csv  JOURNAL.md  README.md  bram.xml  bram_env.py  fit_policy_gait.py  mirror_policy_table.py  readme.md  requirements-rl.txt  search_gait.py  train_cpg_modulator.py  train_hybrid_bc.py  train_ppo.py  visualize_policy.py  visualize_training_run.py
CAD/: Bram_full_assembly.step  Servo.step  bottom.step  top.step
software/firmware/: README.md
software/gait_discovery/: bram.xml  bram_controller.py  export_policy_table.py  gait_discovery_journal.md  main.py  mirror_policy_table.py  puffer_smoke.py  pyproject.toml  readme.md  requirements.txt  resources  search_arc_controller.py  search_gait.py  train_cpg_modulator.py  train_hybrid_bc.py  train_ppo.py  train_residual_ppo.py  visualize_figure8.py  visualize_policy.py  visualize_trianing_run.py
software/gait_discovery/exports/: bram_grid_controller_export.json
software/gait_discovery/pushed_runs/current_policy_20260701/: README.md  manifest.json
software/gait_discovery/pushed_runs/current_policy_20260701/experimental_cpg_modulator/: cpg_modulator.pt  metrics.csv
software/gait_discovery/pushed_runs/current_policy_20260701/yaw_tables/: yaw_right_policy_table.json
software/movement_v2/: README.md  bram_v2_keyframes.json  evaluate_yaw_table_rates.py  export_gait_params_table.py  export_policy_header.py  export_policy_tables.py  export_primitive_bundle.py  keyframe_controller.py  resample_action_table.py  run_yaw_base_residual_pipeline.py  self_righting_state_machine.md  smoke_policy_primitives.py  (+10 more)
(+55 files in other folders)
